syntax = "proto3";

package pb;

import "user.proto";
//import "google/protobuf/timestamp.proto";

option go_package = "sqlc/pb";
    message CreateUserRequest{
        string username = 1;
        string fullname = 2;
        string email = 3;
        string password = 4;
    }

    message ResponseUser{
        User user = 1;
    }